--- a/template/src/components/ModalInfo/index.scss
+++ b/template/src/components/ModalInfo/index.scss
@@ -5,19 +5,11 @@
   display: flex;
   flex-direction: column;
 
-  h3 {
-    margin: 0 0 25px;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: normal;
-    color: $greyChateau;
-  }
-
   p {
     font-weight: normal;
     font-size: 16px;
     line-height: 23px;
-    color: $digital;
+    color: $white;
     margin: 0 0 22px;
   }
 
