--- a/template/src/modularComponents/Sidebar/index.scss
+++ b/template/src/modularComponents/Sidebar/index.scss
@@ -70,7 +70,7 @@
   }
 
   &__header {
-    height: $laptopHeaderHeight;
+    height: $mobileHeaderHeight;
     border-bottom: 1px solid $greyChateau;
     padding: 0 $gap;
     display: flex;
@@ -83,9 +83,9 @@
     display: flex;
     flex-flow: column;
     justify-content: space-between;
-    height: calc(100vh - #{$laptopHeaderHeight});
-    max-height: calc(100vh - #{$laptopHeaderHeight});
-    padding: 30px 15px 30px 30px;
+    height: calc(100vh - #{$mobileHeaderHeight});
+    max-height: calc(100vh - #{$mobileHeaderHeight});
+    padding: $gap 15px $gap $gap;
     background: $desiredDawn;
     overflow: hidden auto;
 
@@ -108,7 +108,7 @@
   &-content {
     max-height: calc(100vh - 270px);
     overflow: auto;
-    padding-right: 15px;
+    padding-right: $gutter;
 
     &::-webkit-scrollbar {
       width: 5px;
